--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid mx-3">
-                <a data-aos="fade-right" data-aos-duration="3000" class="navbar-brand logo" href="#">Amelia</a>
+                <a data-aos="fade-right" data-aos-duration="3000" class="navbar-brand logo" href="#">Adhitiya</a>
                 <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -44,11 +44,12 @@
     <!-- intinya kalau mau bikin ini kita tulis section.home#home jadi titik buat class dan # buat id -->
     <section class="home" id="home">
         <div class="home-img">
-            <img data-aos="flip-left" data-aos-duration="2000" src="img/amel.JPG" alt="">
-        </div>
-        <div class="home-content">
-            <h1 data-aos="flip-up">Hi It's <span>Amelia</span></h1>
-            <h3 class="typing-text">I'm a <span></span></h3>
+            <div class="home-img">
+                <img src="img/poto aing.jpg" alt="">
+            </div>
+            <div class="home-content">
+                <h1>Hi It's <span>Adhitiya</span></h1>
+                <h3 class="typing-text">I'm a <span></span></h3>
             <p style="font-weight:bold;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, veritatis
                 atque, reiciendis unde quo hic rerum delectus, laboriosam quas porro harum pariatur? Voluptatem eos
                 recusandae earum ad sequi iusto rem similique voluptas consequatur laborum dolores quos ullam mollitia
@@ -119,7 +120,6 @@
                     <p>Lorem jamet premium nih bos ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -166,6 +166,42 @@
         </div>
     </section>
   
+    <section class="project" id="project">
+        <h2 data-aos="fade-up" class="heading"> My<span> project</span></h2>
+        <div data-aos="zoom-in-down" id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/project-1.png" class="d-block w-100" alt="img/project-1.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/project-2.png" class="d-block w-100" alt="img/project-2.png">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/project-3.png" class="d-block w-100" alt="img/project-3.png">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </section>
 
     <section class="contact" id="contact">
@@ -197,7 +233,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Privacy Policies</a></li><br>
-            <p class="copyright"> © Amelia | All Right Reserved</p>
+            <p class="copyright"> © Adhitiya Ayu Puspita Sari | All Right Reserved</p>
         </ul>
     </footer>
 
