--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 <body>
     <header class="header">
-
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid mx-3">
                 <a data-aos="fade-right" data-aos-duration="3000" class="navbar-brand logo" href="#">Adhitiya</a>
@@ -44,31 +43,23 @@
     <!-- intinya kalau mau bikin ini kita tulis section.home#home jadi titik buat class dan # buat id -->
     <section class="home" id="home">
         <div class="home-img">
-            <div class="home-img">
-                <img src="img/poto aing.jpg" alt="">
-            </div>
-            <div class="home-content">
-                <h1>Hi It's <span>Adhitiya</span></h1>
-                <h3 class="typing-text">I'm a <span></span></h3>
-            <p style="font-weight:bold;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, veritatis
-                atque, reiciendis unde quo hic rerum delectus, laboriosam quas porro harum pariatur? Voluptatem eos
-                recusandae earum ad sequi iusto rem similique voluptas consequatur laborum dolores quos ullam mollitia
-                consectetur, ea cupiditate! Culpa, corporis excepturi ipsum ratione eveniet quaerat ut quis praesentium
-                voluptas consectetur. Vel optio eaque vitae praesentium libero assumenda. Nulla, incidunt. Neque debitis
-                ab atque? Non, sunt. Velit blanditiis laudantium rerum iusto voluptates ipsum, ipsa nihil suscipit a
-                illo. Quasi, aliquam, tenetur itaque accusamus repellat possimus soluta deleniti veniam repudiandae quod
-                animi ullam dolorem excepturi vel quia doloremque optio?</p>
-
-            <div data-aos="zoom-in" class="social-icon">
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            </div>
-
-            <a data-aos="zoom-in" href="#" class="btn">Hire Me</a>
+           <img src="img/poto aing.jpg" alt="">
         </div>
-    </section>
+        <div class="home-content">
+           <h1>Hi It's <span>Adhitiya</span></h1>
+          <h3 class="typing-text">I'm a <span></span></h3>
+          <p style="font-weight:bold;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, veritatis atque, reiciendis unde quo hic rerum delectus, laboriosam quas porro harum pariatur? Voluptatem eos recusandae earum ad sequi iusto rem similique voluptas consequatur laborum dolores quos ullam mollitia consectetur, ea cupiditate! Culpa, corporis excepturi ipsum ratione eveniet quaerat ut quis praesentium voluptas consectetur. Vel optio eaque vitae praesentium libero assumenda. Nulla, incidunt. Neque debitis ab atque? Non, sunt. Velit blanditiis laudantium rerum iusto voluptates ipsum, ipsa nihil suscipit a illo. Quasi, aliquam, tenetur itaque accusamus repellat possimus soluta deleniti veniam repudiandae quod animi ullam dolorem excepturi vel quia doloremque optio?</p>
+   
+       <div class="social-icon">
+           <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+           <a href="#"><i class="fa-brands fa-github"></i></a>
+           <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+           <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+       </div>
+   
+       <a href="#" class="btn">Hire Me</a>
+        </div>
+       </section>
 
 
     <section class="services" id="services">
